# EMTT

api/: main.py  pyproject.toml
api/utils/: transcript.py  vector_store.py
api/utils/chroma_db/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-messages.tsx  header.tsx
